<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="#808080"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#C0C0C0"
            android:textSize="30sp"
            android:text="@string/first_junit_title"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:id="@+id/firstJunitFirstMethod"
            android:src="@mipmap/first_junit_first_method"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#C0C0C0"
            android:textSize="30sp"
            android:text="@string/first_junit_first_method_discussion"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#C0C0C0"
            android:textSize="30sp"
            android:text="@string/first_junit_before_testing_statement"/>

        <ImageView
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:src="@mipmap/project_structure"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#C0C0C0"
            android:textSize="30sp"
            android:text="@string/describe_project_structure"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#C0C0C0"
            android:textSize="30sp"
            android:text="@string/creating_test_case"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#C0C0C0"
            android:textSize="30sp"
            android:text="@string/first_test_method"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@mipmap/first_test_method"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#C0C0C0"
            android:textSize="30sp"
            android:text="@string/first_junit_last_statement"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#C0C0C0"
            android:textSize="30sp"
            android:text="@string/creating_first_test_method"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@mipmap/first_test_case"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#C0C0C0"
            android:textSize="30sp"
            android:text="@string/first_test_case_discussion"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#C0C0C0"
            android:textSize="30sp"
            android:text="@string/change_first_test_expected_value"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#C0C0C0"
            android:textSize="30sp"
            android:text="@string/exercise_first_junit"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#808080"
            android:id="@+id/firstVideo"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:text="@string/watch_arabic_video_tutorial"/>
    </LinearLayout>




</ScrollView>
