<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="#808080"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#C0C0C0"
            android:textSize="30sp"
            android:text="@string/asserttrue_first_txt"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@mipmap/asserttrue_first_img"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#C0C0C0"
            android:textSize="30sp"
            android:text="@string/asserttrue_first_disscusion"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@mipmap/asserttrue_first_test"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#C0C0C0"
            android:textSize="30sp"
            android:text="@string/asserttrue_after_first_test"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@mipmap/asserttrue_first_refactor"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#C0C0C0"
            android:textSize="30sp"
            android:text="@string/asserttrue_after_refactoring"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@mipmap/asserttrue_final_refactor"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#C0C0C0"
            android:textSize="30sp"
            android:text="@string/asserttrue_final_statement"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#C0C0C0"
            android:textSize="30sp"
            android:text="@string/asserttrue_exercise"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#808080"
            android:id="@+id/assertTrueVideo"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:text="@string/watch_arabic_video_tutorial"/>

    </LinearLayout>

</ScrollView>